infra/kubernetes/networkpolicies/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bff-ingress
  namespace: eduonline
spec:
  podSelector:
    matchLabels:
      app: bff-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 5004
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-status-api-ingress
  namespace: eduonline
spec:
  podSelector:
    matchLabels:
      app: status-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5005
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress-from-bff-and-ingress
  namespace: eduonline
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - auth-api
          - alunos-api
          - conteudos-api
          - pagamentos-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: bff-api
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5000
        - protocol: TCP
          port: 5001
        - protocol: TCP
          port: 5002
        - protocol: TCP
          port: 5003
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress
  namespace: eduonline
spec:
  podSelector:
    matchLabels:
      app: sqlserver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - auth-api
                  - alunos-api
                  - conteudos-api
                  - pagamentos-api
      ports:
        - protocol: TCP
          port: 1433
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eventstore-ingress
  namespace: eduonline
spec:
  podSelector:
    matchLabels:
      app: eventstore
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - auth-api
                  - alunos-api
                  - conteudos-api
                  - pagamentos-api
      ports:
        - protocol: TCP
          port: 2113
        - protocol: TCP
          port: 1113
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-ingress
  namespace: eduonline
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - alunos-api
                  - pagamentos-api
      ports:
        - protocol: TCP
          port: 5672
