infra/kubernetes/networkpolicies/allow-inter-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress-to-backends
  namespace: eduonline
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - auth-api
          - alunos-api
          - conteudos-api
          - pagamentos-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: sqlserver
      ports:
        - protocol: TCP
          port: 1433
    - to:
        - podSelector:
            matchLabels:
              app: eventstore
      ports:
        - protocol: TCP
          port: 2113
        - protocol: TCP
          port: 1113
    - to:
        - podSelector:
            matchLabels:
              app: rabbitmq
      ports:
        - protocol: TCP
          port: 5672
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-bff-egress-to-apis
  namespace: eduonline
spec:
  podSelector:
    matchLabels:
      app: bff-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: auth-api
      ports:
        - protocol: TCP
          port: 5000
    - to:
        - podSelector:
            matchLabels:
              app: conteudos-api
      ports:
        - protocol: TCP
          port: 5001
    - to:
        - podSelector:
            matchLabels:
              app: alunos-api
      ports:
        - protocol: TCP
          port: 5002
    - to:
        - podSelector:
            matchLabels:
              app: pagamentos-api
      ports:
        - protocol: TCP
          port: 5003
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
